# frame_overlap

./: .gitignore  ADAPTIVE_TOF_IMPLEMENTATION_PLAN.md  BENCHMARKING_TEMPLATE.md  DEPLOYMENT.md  FILE_STRUCTURE.txt  IMPLEMENTATION_SUMMARY.md  QUICKSTART_ADAPTIVE.md  README.md  RELEASE_NOTES_v0.2.0.md  WAVELENGTH_FILTERING.md  packages.txt  pyproject.toml  requirements.txt  streamlit_adaptive_bragg.py  streamlit_app.py  test_duty_cycle.py  test_nbragg_install.py
.documents/: CHANGELOG.md  DEPLOYMENT_GUIDE.md  FOBI_INTERPOLATED_KERNEL_UPDATE.md  FOBI_METHOD.md  OFFICIAL_FOBI_COMPARISON.md  PAPER_COMPARISON.md  SINGLE_FRAME_FIX.md  SOLUTION_TO_YOUR_PROBLEM.md  STREAMLIT_DEPLOY.md  UPDATE_SUMMARY.md  WHY_RECONSTRUCTION_FAILS.md
.github/workflows/: docs.yml
.streamlit/: config.toml
docs/: changelog.rst  conf.py  contributing.rst  data_cleaning.md  examples.rst  index.rst  installation.rst  quickstart.rst  requirements.txt  workflow_guide.rst
docs/api/: analysis.rst  data.rst  (+2 more)
examples/: two_stage_with_offset_correction.py
notebooks/: example_adaptive_bragg_edge.ipynb  frame_overlap_tutorial.ipynb  test_correct_workflow.py  tutorial.ipynb  tutorial_v0.2.ipynb
tests/: README_NBRAGG_TESTS.md  debug_nan_issue.py  debug_nbragg.py  debug_reconstruction_plot.py  debug_streamlit_settings.py  test_adaptive_bragg_edge.py  test_analysis_integration.py  test_final_plot.py  test_fobi_method.py  test_fobi_style_overlap.py  test_fobi_style_overlap_FIXED.py  test_frame_overlap.py  test_groupby.py  test_interpolated_kernel.py  test_iron_cellulose_extinction.py  test_nbragg_fallback.py  test_nbragg_final.py  test_new_features.py  test_overlap_understanding.py  test_poisson_normalization.py  test_real_vs_synthetic_overlap.py  test_reconstruction_fix.py  test_resonance_analysis.py  test_single_frame_reconstruction.py  test_stats_display.py  test_streamlit_nbragg_fix.py  test_streamlit_wavelength.py  test_streamlit_workflow.py  test_wavelength_conversion.py  test_wavelength_filtering.py  test_wiener_smooth.py
(+32 files in other folders)
