[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frame_overlap"
version = "0.1.0"
description = "A package for analyzing frame overlap in neutron ToF data with deconvolution and optimization."
authors = [
    { name = "Tsviki Y. Hirsh", email = "tsviki@soreq.gov.il" }
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "scipy>=1.7",
    "matplotlib>=3.4",
    "lmfit>=1.0"
]
license = { text = "MIT" }
keywords = ["neutron", "tof", "deconvolution", "wiener", "optimization"]

[tool.setuptools]
package-dir = {"" = "src"}

[project.urls]
"Homepage" = "https://github.com/TsvikiHirsh/frame_overlap"
"Repository" = "https://github.com/TsvikiHirsh/frame_overlap.git"